# gvar

./: .gitignore  .readthedocs.yaml  CHANGES.txt  INSTALLATION.txt  MANIFEST.in  README.rst  makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: wheels.yml
doc/: environment.yml
doc/html/: .buildinfo  case-integral.html  case-pendulum.html  case-svdcut.html  genindex.html  gvar.html  gvar_dataset.html  gvar_other.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
doc/html/.doctrees/: case-integral.doctree  case-pendulum.doctree  case-svdcut.doctree  environment.pickle  gvar.doctree  gvar_dataset.doctree  gvar_other.doctree  index.doctree  overview.doctree
doc/html/_sources/: case-integral.rst.txt  case-pendulum.rst.txt  case-pendulum.txt  case-svdcut.rst.txt  case-svdcut.txt  gvar.rst.txt  gvar.txt  gvar_dataset.rst.txt  gvar_other.rst.txt  index.rst.txt  index.txt  overview.rst.txt  overview.txt
doc/html/_static/: documentation_options.js
doc/source/: Makefile  case-integral.rst  case-pendulum.rst  case-svdcut.rst  conf.py  gvar.rst  gvar_dataset.rst  gvar_other.rst  index.rst  overview.rst
examples/: integrate.out  integrate.py  makefile  pendulum-clock.out  pendulum-clock.py  svdcut.out  svdcut.py
src/: gvar.pxd
src/gvar/: __init__.pxd  __init__.py  __init__.pyx  _bufferdict.c  _bufferdict.pyx  _evalcov_fast.c  _evalcov_fast.pyx  _gvarcore.c  _gvarcore.pxd  _gvarcore.pyx  _scipy_connected_components.c  _scipy_connected_components.pxd  _scipy_connected_components.pyx  _svec_smat.c  _svec_smat.pxd  _svec_smat.pyx  _utilities.c  _utilities.pyx  _version.py  cspline.py  dataset.c  dataset.pyx  linalg.py  ode.py  pade.py  powerseries.py  root.py
tests/: format-examples.py  makefile  test_bufferdict.py  test_evalcov_fast.py  test_gvar.py  test_gvar_dataset.py  test_gvar_other.py  test_new_evalcov.py
