[metadata]
name = gvar
version = 11.11.5
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/qcdevol
description = Utilities for manipulating correlated Gaussian random variables.
long_description = file: README.rst

[options]
zip_safe = False
packages =
    gvar
package_dir = 
    = src
python_requires = >=2.7
install_requires = 
    numpy>=1.16
    scipy
    importlib-metadata; python_version<'3.8'
include_package_data = True

[options.package_data]
gvar =
    ../gvar.pxd
    _svec_smat.pxd
    _gvarcore.pxd