[metadata]
name = gvar
version = 13.1.6
author = G. Peter Lepage
author_email = g.p.lepage@cornell.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/gplepage/gvar
description = Utilities for manipulating correlated Gaussian random variables.
long_description = file: README.rst

[options]
zip_safe = False
packages =
    gvar
package_dir = 
    = src
python_requires = >=3.9
install_requires = 
    numpy>=1.24
    scipy>=1.11
include_package_data = True

[options.package_data]
gvar =
    __init__.pxd
    _svec_smat.pxd
    _gvarcore.pxd